Add Device Configuration storage interface. Add draft of handling configuration storeg in SuplaDevice class. Extract Wifi SSID and password settings to interface and common base class. StatusLed: change led sequence on error (300/100 ms) ESP-IDF, ESP8266 RTOS: add draft of config storage class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SUPLA_DEVICE_SRCS
   src/supla/clock/clock.cpp
 
   src/supla/storage/storage.cpp
+  src/supla/storage/config.cpp
 
   src/supla/network/network.cpp
 
