Add SuplaDeviceClass::generateHostname method SuplaDevice reorganization to handle config mode Add support for SUPLA_CALCFG_CMD_ENTER_CFG_MODE (requires     Storage::Config)

--- a/extras/test/CMakeLists.txt
+++ b/extras/test/CMakeLists.txt
@@ -50,6 +50,7 @@ file(GLOB TEST_SRC
   CorrectionTests/*cpp
   ActionTriggerTests/*cpp
   ElectricityMeterTests/*cpp
+  ToolsTests/*cpp
   )
 
 file(GLOB DOUBLE_SRC doubles/*.cpp)
