Add web server for config mode (partial implementation). Add "last state logger" to keep track of previous statuses. Add html generators for some elements.
ESP8266 RTOS, ESP-IDF: add web server target implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,8 @@ set(SRCS
   supla/at_channel.cpp
   supla/action_handler.cpp
 
+  supla/device/last_state_logger.cpp
+
   supla/storage/storage.cpp
   supla/storage/config.cpp
 
