Add handling of reboot request via www cfg mode. HtmlElement: add selected helper method WebSender: add send method for int WebServer: add draft of key/value pairs handling for POST messages to HtmlElements WifiParameters: add handling of sid and wpw

--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SUPLA_DEVICE_SRCS
   ../../../src/supla/network/network.cpp
   ../../../src/supla/network/netif_wifi.cpp
   ../../../src/supla/network/web_server.cpp
+  ../../../src/supla/network/web_sender.cpp
   ../../../src/supla/network/html_generator.cpp
   ../../../src/supla/network/html_element.cpp
   ../../../src/supla/network/html/device_info.cpp
