--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SUPLA_DEVICE_SRCS
   src/supla/network/html_element.cpp
   src/supla/network/html_generator.cpp
   src/supla/network/web_server.cpp
+  src/supla/network/web_sender.cpp
   src/supla/network/netif_wifi.cpp
   src/supla/network/html/device_info.cpp
   src/supla/network/html/protocol_parameters.cpp
