Add simple mutex implementation embedded in class (Mutex, AutoLock     classes) LastStateLogger: add thread/task safety for ESP8266 RTOS, ESP-IDF SuplaDevice: automatic local web server handling for config mode. SuplaDevice: add actions to start/stop local web server StatusLed: add "leaving config mode" state which change LED behavior

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(SUPLA_DEVICE_SRCS
   src/supla/action_handler.cpp
   src/supla/time.cpp
   src/supla/timer.cpp
+  src/supla/mutex.cpp
+  src/supla/auto_lock.cpp
 
   src/supla/condition.cpp
   src/supla/condition_getter.cpp
