--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,8 @@ set(SRCS
   supla/correction.cpp
   supla/at_channel.cpp
   supla/action_handler.cpp
+  supla/mutex.cpp
+  supla/auto_lock.cpp
 
   supla/device/last_state_logger.cpp
 
@@ -46,6 +48,9 @@ set(SRCS
 
   SuplaDevice.cpp
   supla/network/network.cpp
+  supla/network/web_server.cpp
+  supla/network/html_element.cpp
+  supla/network/html_generator.cpp
   supla/clock/clock.cpp
 
   supla/sensor/therm_hygro_press_meter.cpp
