--- a/extras/examples/linux/CMakeLists.txt
+++ b/extras/examples/linux/CMakeLists.txt
@@ -6,6 +6,11 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_BUILD_TYPE Debug)
 
+include(FetchContent)
+
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
+FetchContent_MakeAvailable(json)
+
 find_package(OpenSSL REQUIRED)
 # Current board sources
 set(BOARD_SRC
@@ -31,3 +36,6 @@ target_link_libraries (supla-linux-example LINK_PUBLIC
   OpenSSL::SSL
   )
 
+target_link_libraries (supla-linux-example PRIVATE
+  nlohmann_json::nlohmann_json
+  )
