--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -25,6 +25,8 @@ set(SUPLA_DEVICE_SRCS
   ../../../src/supla/uptime.cpp
   ../../../src/supla/mutex.cpp
   ../../../src/supla/auto_lock.cpp
+  ../../../src/supla/sha256.cpp
+  ../../../src/supla/rsa_verificator.cpp
 
   ../../../src/supla/storage/storage.cpp
   ../../../src/supla/storage/config.cpp
