Linux: draft of network client class (for PoC on Fronius integration)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,8 @@ set(SUPLA_DEVICE_SRCS
   src/supla/control/simple_button.cpp
   src/supla/control/virtual_relay.cpp
 
+  src/supla/pv/fronius.cpp
+
 # not all files from sensor folder are compiled here. Some still require
 # porting from ARDUINO
   src/supla/sensor/binary.cpp
