Add SuplaDevice.setAutomaticResetOnConnectionProblem(sec) method to trigger device restart when connection can't be established for a given time.

--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -110,6 +110,7 @@ set(NETTLE_SRCS
 
 
 set(SUPLA_DEVICE_PORTING_SRCS
+  ../../porting/esp-idf/esp_platform.cpp
   ../../porting/esp-idf/esp_idf_wifi.cpp
   ../../porting/esp-idf/esp_idf_gpio.cpp
   ../../porting/esp-idf/spiffs_storage.cpp
