Fix FreeRTOS target compilation

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SUPLA_DEVICE_LINUX_SRCS
   linux_network.cpp
   linux_timers.cpp
   network_client.cpp
+  ../../../src/supla/pv/fronius.cpp
+  ../../../src/supla/pv/afore.cpp
 )
 
 target_sources(supladevice
