Linux: add ThermometerParsed, Supla::Source::Cmd, Supla::Parser::Simple
Cmd class allows to use linux cmd line to fetch data. Then data is
parsed by Parser instance and used in a specific sensor.
Simple parser expects numeric values (one in each line).
ThermometerParsed use parser to fetch data from a given source and pass
it as temperature value to Supla. It expected data on use parser->getValue(0)

I.e. following code will allow to read CPU temperature and show it in
Supla. This cmd line argument has to be adjusted to a specific computer.
You can try calling it in cmd line and adjust it there in order to get
temperature value that you are interesed in

new Supla::Sensor::ThermometerParsed(
  new Supla::Parser::Simple(
    new Supla::Source::Cmd("sensors | grep temp3 | cut -d : -f2")
  )
);

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -2,6 +2,13 @@ set(SUPLA_DEVICE_LINUX_SRCS
   linux_network.cpp
   linux_timers.cpp
   network_client.cpp
+
+  supla/source/cmd.cpp
+
+  supla/parser/simple.cpp
+
+  supla/sensor/thermometer_parsed.cpp
+
   ../../../src/supla/pv/fronius.cpp
   ../../../src/supla/pv/afore.cpp
 )
