Linux: add json parser for channel input, add ImpulseCounterParsed and ElectricityMeterParsed channels.
Json parser allows to use json format as input for "Parsed" channel
types.
ImpulseCounterParsed is an ImpulseCounter channel with input from
parser, so it can be used to put data from some bash command or from
file.
ElectricityMeterParsed is an ElectricityMeter channel with input from
parser.

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -1,3 +1,6 @@
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
+FetchContent_MakeAvailable(json)
+
 set(SUPLA_DEVICE_LINUX_SRCS
   linux_network.cpp
   linux_timers.cpp
@@ -5,9 +8,14 @@ set(SUPLA_DEVICE_LINUX_SRCS
 
   supla/source/cmd.cpp
 
+  supla/parser/parser.cpp
   supla/parser/simple.cpp
+  supla/parser/json.cpp
 
+  supla/sensor/sensor_parsed.cpp
   supla/sensor/thermometer_parsed.cpp
+  supla/sensor/impulse_counter_parsed.cpp
+  supla/sensor/electricity_meter_parsed.cpp
 
   ../../../src/supla/pv/fronius.cpp
   ../../../src/supla/pv/afore.cpp
@@ -25,3 +33,6 @@ target_include_directories (supladevice
 
 target_compile_definitions(supladevice PUBLIC SUPLA_LINUX)
 
+target_link_libraries (supladevice PUBLIC
+  nlohmann_json::nlohmann_json
+  )
