Linux: add Source::File which can be used for parsed sensors, add some error handling for parsed sensors.
File source expects files to be refreshed within a givent period of
time. If file wasn't updated, it is considered as outdated.

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SUPLA_DEVICE_LINUX_SRCS
   network_client.cpp
 
   supla/source/cmd.cpp
+  supla/source/file.cpp
 
   supla/parser/parser.cpp
   supla/parser/simple.cpp
