--- a/extras/examples/linux/CMakeLists.txt
+++ b/extras/examples/linux/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.13)
 
 project(supla-linux-example)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_BUILD_TYPE Debug)
 
 include(FetchContent)
 
+# SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 find_package(OpenSSL REQUIRED)
 # Current board sources
 set(BOARD_SRC
