Sensor: add set, clear, toggle methds for VirtualBinary Linux: add sensor BinaryParsed (shows "true" when on input it gets     number 1 (actually numbers in range 0.9 to 1.1 are considered as       "true")

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SUPLA_DEVICE_LINUX_SRCS
   supla/sensor/thermometer_parsed.cpp
   supla/sensor/impulse_counter_parsed.cpp
   supla/sensor/electricity_meter_parsed.cpp
+  supla/sensor/binary_parsed.cpp
 
   ../../../src/supla/pv/fronius.cpp
   ../../../src/supla/pv/afore.cpp
