Linux: example application update

--- a/extras/examples/linux/CMakeLists.txt
+++ b/extras/examples/linux/CMakeLists.txt
@@ -1,36 +1,33 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(supla-linux-example)
+project(supla-device-linux)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_BUILD_TYPE Debug)
 
-include(FetchContent)
-
 # SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
-find_package(OpenSSL REQUIRED)
 # Current board sources
 set(BOARD_SRC
   main.cpp
   )
 
+# supladevice library target is used in porting/linux cmake
 add_library(supladevice "")
 add_subdirectory($ENV{SUPLA_DEVICE_PATH} supla-device)
-add_subdirectory($ENV{SUPLA_DEVICE_PATH}/extras/porting/linux supla-device-linux)
+add_subdirectory($ENV{SUPLA_DEVICE_PATH}/extras/porting/linux supla-porting-linux)
 
 include_directories(
-  $ENV{SUPLA_DEVICE_PATH}/src
   .
-  )
+)
 
-add_executable(supla-linux-example
+add_executable(supla-device-linux
   ${BOARD_SRC}
-  )
+)
 
-set_target_properties(supla-linux-example PROPERTIES LINK_LIBRARIES -pthread)
-target_link_libraries (supla-linux-example LINK_PUBLIC
+set_target_properties(supla-device-linux PROPERTIES LINK_LIBRARIES -pthread)
+target_link_libraries (supla-device-linux LINK_PUBLIC
   supladevice
-  OpenSSL::SSL
-  )
+)
 
+#target_compile_options(supla-device-linux PRIVATE -Wall -Wextra -Wpedantic -Werror)
