Linux: add file storage for last state log

--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SUPLA_DEVICE_LINUX_SRCS
   linux_network.cpp
   linux_yaml_config.cpp
   linux_platform.cpp
+  linux_file_state_logger.cpp
   IPAddress.cpp
 
   linux_timers.cpp
