--- a/extras/porting/linux/CMakeLists.txt
+++ b/extras/porting/linux/CMakeLists.txt
@@ -5,7 +5,22 @@ find_package(OpenSSL REQUIRED)
 
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 FetchContent_Declare(cxxopts URL https://github.com/jarro2783/cxxopts/archive/refs/tags/v3.0.0.tar.gz)
-FetchContent_MakeAvailable(json cxxopts)
+#FetchContent_MakeAvailable(json cxxopts)
+
+# NOTE: Where possible, prefer to use FetchContent_MakeAvailable()
+#       instead of custom logic like this
+
+# Check if population has already been performed
+FetchContent_GetProperties(json)
+if(NOT json_POPULATED)
+  FetchContent_Populate(json)
+  add_subdirectory(${json_SOURCE_DIR} ${json_BINARY_DIR})
+endif()
+FetchContent_GetProperties(cxxopts)
+if(NOT cxxopts_POPULATED)
+  FetchContent_Populate(cxxopts)
+  add_subdirectory(${cxxopts_SOURCE_DIR} ${cxxopts_BINARY_DIR})
+endif()
 
 set(SUPLA_DEVICE_LINUX_SRCS
   linux_network.cpp
