Add KeyValue class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SUPLA_DEVICE_SRCS
 
   src/supla/storage/storage.cpp
   src/supla/storage/config.cpp
+  src/supla/storage/key_value.cpp
 
   src/supla/network/network.cpp
   src/supla/network/html_element.cpp
