Drone should use latest sources for Arduino examples compilation check

--- a/.drone.yml
+++ b/.drone.yml
@@ -76,6 +76,9 @@ steps:
   image: devel/arduino-cli
   pull: never
   commands:
+  - export SUPLA_DEVICE_PATH=/drone/src
+  - rm ~/Arduino/libraries/supla-device
+  - ln -s /drone/ ~/Arduino/libraries/supla-device
   - cd examples
   - arduino-cli compile --fqbn esp8266:esp8266:generic --optimize-for-debug --export-binaries --warnings all --clean ./Afore/
   - arduino-cli compile --fqbn esp8266:esp8266:generic --optimize-for-debug --export-binaries --warnings all --clean ./DallasTemperature/
@@ -96,6 +99,9 @@ steps:
   image: devel/arduino-cli
   pull: never
   commands:
+  - export SUPLA_DEVICE_PATH=/drone/src
+  - rm ~/Arduino/libraries/supla-device
+  - ln -s /drone/ ~/Arduino/libraries/supla-device
   - cd examples
   - arduino-cli compile --fqbn esp32:esp32:esp32wrover --optimize-for-debug --export-binaries --warnings all --clean ./Afore/
   - arduino-cli compile --fqbn esp32:esp32:esp32wrover --optimize-for-debug --export-binaries --warnings all --clean ./DallasTemperature/
@@ -116,6 +122,9 @@ steps:
   image: devel/arduino-cli
   pull: never
   commands:
+  - export SUPLA_DEVICE_PATH=/drone/src
+  - rm ~/Arduino/libraries/supla-device
+  - ln -s /drone/ ~/Arduino/libraries/supla-device
   - cd examples
   - arduino-cli compile --fqbn arduino:avr:mega --optimize-for-debug --export-binaries --warnings all --clean ./Afore/
   - arduino-cli compile --fqbn arduino:avr:mega --optimize-for-debug --export-binaries --warnings all --clean ./DallasTemperature/
