--- a/.drone.yml
+++ b/.drone.yml
@@ -182,7 +182,8 @@ steps:
   commands:
     - cpplint --filter=-build/include_subdir ./src/*
     - cpplint --filter=-build/include_subdir --recursive ./src/supla/*
-    - cpplint --filter=-build/include_subdir ./extras/porting/*
+    - cpplint --filter=-build/include_subdir --recursive ./extras/porting/*
+    - cpplint --filter=-build/include_subdir,-build/include_order ./extras/examples/linux/*
 
 - name: rocket
   image: mike1pol/drone-rocket
