cpplint add other examples

--- a/.drone.yml
+++ b/.drone.yml
@@ -184,6 +184,9 @@ steps:
     - cpplint --filter=-build/include_subdir --recursive ./src/supla/*
     - cpplint --filter=-build/include_subdir --recursive ./extras/porting/*
     - cpplint --filter=-build/include_subdir,-build/include_order ./extras/examples/linux/*
+    - cpplint --filter=-build/include_subdir ./extras/examples/esp8266_rtos/main/*
+    - cpplint --filter=-build/include_subdir ./extras/examples/esp_idf/main/*
+    - cpplint --filter=-build/include_subdir ./extras/examples/freertos_linux/*
 
 - name: rocket
   image: mike1pol/drone-rocket
