--- a/.drone.yml
+++ b/.drone.yml
@@ -186,7 +186,7 @@ steps:
     - cpplint --filter=-build/include_subdir,-build/include_order ./extras/examples/linux/*
     - cpplint --filter=-build/include_subdir ./extras/examples/esp8266_rtos/main/*
     - cpplint --filter=-build/include_subdir ./extras/examples/esp_idf/main/*
-    - cpplint --filter=-build/include_subdir ./extras/examples/freertos_linux/*
+    - cpplint --filter=-build/include_subdir ./extras/examples/freertos_linux/main.cpp
 
 - name: rocket
   image: mike1pol/drone-rocket
